# tasks-manager

./: .gitignore  CMakeLists.txt  README.MD
benchmarks/: say_hello_bench.cpp
configs/: static_config.yaml
src/: hello_service.cpp  hello_service.hpp  main.cpp  say_hello.cpp  say_hello.hpp
testsuite/: test_hello.py
unittests/: say_hello_test.cpp
